--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^0.18.0",
+    "body-scroll-lock": "^2.6.1",
     "firebase": "^5.5.9",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5",
